@@ -10,7 +10,7 @@ usage() {
 }
 
 valid_app_options () {
-    echo "pmd, cpd, cpdgui, designer, bgastviewer"
+    echo "pmd, cpd, cpdgui, designer, bgastviewer, designerold"
 }
 
 is_cygwin() {
@@ -74,6 +74,26 @@ check_lib_dir() {
   fi
 }
 
+jre_specific_vm_options() {
+  # java_ver is eg "18" for java 1.8, "90" for java 9.0, "100" for java 10.0.x
+  java_ver=$(java -version 2>&1 | sed -n -e 's/-ea/.0.0/i' -e 's/^.* version "\(.*\)\.\(.*\)\..*".*$/\1\2/p')
+  options=""
+
+  if [ "$java_ver" -ge 90 ] && [ "${APPNAME}" = "designer" ]
+  then # open internal module of javafx to reflection (for our TreeViewWrapper)
+    options="--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED"
+    # The rest here is for RichtextFX
+    options+=" --add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED"
+    options+=" --add-opens javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED"
+    options+=" --add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED"
+    options+=" --add-opens javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED"
+    # Warn of remaining illegal accesses
+    options+=" --illegal-access=warn"
+  fi
+
+  echo $options
+}
+
 readonly APPNAME="${1}"
 if [ -z "${APPNAME}" ]; then
     usage
@@ -89,6 +109,9 @@ case "${APPNAME}" in
     readonly CLASSNAME="net.sourceforge.pmd.cpd.CPD"
     ;;
   "designer")
+    readonly CLASSNAME="net.sourceforge.pmd.util.fxdesigner.DesignerStarter"
+    ;;
+  "designerold")
     readonly CLASSNAME="net.sourceforge.pmd.util.designer.Designer"
     ;;
   "bgastviewer")
@@ -125,4 +148,5 @@ cygwin_paths
 
 java_heapsize_settings
 
-java ${HEAPSIZE} -cp "${classpath}" "${CLASSNAME}" "$@"
+java ${HEAPSIZE} $(jre_specific_vm_options) -cp "${classpath}" "${CLASSNAME}" "$@"
+
